style.css
* {
  margin: 0;
  padding: 0;
}
body {
  font-family: "raleway", sans-serif;
  font-size: 0.9rem;
}
#body {
  width: 95%;
  margin: auto;
}
#marseille a:hover,
#populaire a:hover,
#activite a:hover {
  transform: scale(1.05);
  transition: 0.3s;
}
a {
  text-decoration: none;
  color: black;
}
ul {
  list-style-type: none;
}
h2 {
  font-size: 1.3rem;
}
.full {
  color: #0065fc;
}
.full_grey {
  color: #deebff;
}
/************************ header *********************/
header {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-top: 1.3vw;
}
#logo img {
  width: 11vh;
}
#logo:hover {
  transform: scale(1.2);
  transition: 0.4s;
}
nav {
  display: flex;
  align-items: center;
  font-size: 1.1rem;
  margin-right: 2vw;
}
nav ul {
  display: flex;
  padding: 1vw;
}
nav li a {
  padding: 2vw;
}
#signIn {
  text-decoration: none;
  color: #0065fc;
}
#signIn:hover {
  border-bottom: 2px #0065fc solid;
  border-top: none;
}
nav a:hover {
  color: #0065fc;
  border-top: 2px #0065fc solid;
}
/************************** main ************************/
/******** section searchBar *********/
/* h1 p */
h1 {
  margin-top: 1.1vw;
}
#h1 p {
  margin-top: 0.5vw;
  font-size: 0.9rem;
}
/************ formulaire ************/
/* ville */
#formulaire {
  margin-top: 2.2vh;
  font-size: 1.2rem;
  display: flex;
}
#carte {
  background-color: #f2f2f2;
  width: 50px;
  border-radius: 15px 0 0 15px;
  display: flex;
  align-items: center;
  justify-content: center;
}
#carte:hover {
  cursor: pointer;
  background-color: #0065fc;
  color: white;
  transition: 0.4s;
}
#formulaire input[type="text"] {
  font-size: 1.1rem;
  width: 200px;
  padding: 10px;
  border-top: 1px solid #f2f2f2;
  border-bottom: 1px solid #f2f2f2;
  border-left: none;
  border-right: none;
  font-weight: bold;
}
#formulaire input[type="submit"] {
  padding: 13px;
  font-size: 20px;
  background-color: #0065fc;
  cursor: pointer;
  color: white;
  border-radius: 0 15px 15px 0;
  border: 1px solid #f2f2f2;
  width: 160px;
}
#formulaire input[type="submit"]:hover {
  background-color: #deebff;
  color: rgba(0, 0, 0, 0.5);
  transition: 0.4s;
}
#loupe {
  display: none;
}
/************* filtres **************/
#filtres {
  font-weight: bold;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin-top: 15px;
}
#titre {
  margin-right: 10px;
  margin-top: 15px;
}
#blockFiltres {
  display: flex;
  flex-wrap: wrap;
}
.boiteFiltres {
  margin-top: 15px;
  display: flex;
  align-items: center;
  border: 1px solid #deebff;
  border-radius: 30px;
  margin-left: 25px;
}
.boiteFiltres:hover {
  background-color: #0065fc;
  color: white;
  cursor: pointer;
  transition: 0.4s;
}
.texteFiltres {
  padding-left: 10px;
  padding-right: 10px;
}
#filtres i {
  background-color: #deebff;
  padding: 0.8rem;
  border-radius: 30px;
  color: #0065fc;
}
/*********** ligne d'info **********/
.info {
  margin: 20px 0 20px 0;
}
.info p {
  display: flex;
  font-size: 80%;
  align-items: center;
}
.info i {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  width: 20px;
  height: 20px;
  padding: 4px;
  color: #0065fc;
  font-size: 0.8rem;
  border: 1px solid #deebff;
  border-radius: 25px;
}
/**************** hôtels **************/
#hotels {
  display: flex;
  margin-bottom: 2.8vw;
}
#hotel h2 {
  margin-bottom: 1.7vh;
}
/*************** marseille ************/
#marseille {
  display: flex;
  flex: 60%;
  flex-direction: column;
  background-color: #f2f2f2;
  border-radius: 20px;
  padding: 1.8vw 1vw 1.1vw 1.7vw;
  margin-right: 2.2vw;
}
.encartMarseille {
  flex: 1 30%;
  background-color: white;
  box-shadow: 5px 5px 5px #d1d1d1;
  border-radius: 20px;
  margin: 10px 15px 10px 0px;
  padding: 5px;
}
#photosMarseille {
  display: flex;
  flex-wrap: wrap;
}
.encartMarseille img {
  width: 100%;
  height: 140px;
  object-fit: cover;
  border-radius: 20px 20px 0px 0px;
}
.encartMarseille figcaption {
  margin-left: 15px;
}
.texte {
  margin-bottom: 1vh;
}
.texte p {
  margin-top: 0.9vh;
}
.etoiles {
  display: flex;
}
#plus {
  font-weight: bold;
  font-size: 1.2rem;
  padding-top: 5vh;
}
#plus a:hover {
  color: #0065fc;
}
/**************** populaire **************/
#populaire {
  flex: 30%;
  background-color: #f2f2f2;
  border-radius: 20px;
  padding: 1.8vw 1vw 1.1vw 1.7vw;
}
#tetePopulaire {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
#photosPopulaire {
  display: flex;
  flex-wrap: wrap;
}
.encartPopulaire {
  width: 100%;
}
#populaire figure {
  display: flex;
  height: 160px;
  width: 100%;
  background-color: white;
  box-shadow: 5px 5px 5px #d1d1d1;
  border-radius: 20px;
  padding: 5px;
  margin: 1.1vw 1.3vw 1vw 0vw;
}
.encartPopulaire img {
  min-width: 40%;
  max-width: 40%;
  height: 160px;
  object-fit: cover;
  border-radius: 20px 0px 0px 20px;
}
.encartPopulaire figcaption {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 57%;
  padding: 1.2vw;
}
#populaire p {
  margin-bottom: 35px;
}
.fa-chart-line:hover {
  transform: scale(1.3);
  transition: 0.3s;
  color: #0065fc;
}
.fa-chart-line {
  font-size: 1.1rem;
  margin-right: 1.3vw;
}
/******************** activités ****************/
#activite {
  margin-bottom: 4vw;
}
#activite h3 {
  margin: 1vw;
}
#photoActivite {
  display: flex;
  height: 29vw;
  margin-top: 20px;
}
#article1 {
  display: flex;
  width: 50%;
}
#article2 {
  display: flex;
  width: 50%;
  margin-left: 1.6vw;
}
.grandeImg {
  display: flex;
  flex: 25%;
  margin-right: 1.6vw;
}
.encartActivite {
  display: flex;
}
.petiteImg {
  display: flex;
  flex: 25%;
  flex-direction: column;
  justify-content: space-between;
}
#aPomegues {
  height: 50%;
}
#activite figure {
  width: 100%;
}
#aFrioul {
  height: 50%;
  align-items: flex-end;
}
.grandeImg img {
  width: 100%;
  height: 85%;
  object-fit: cover;
}
#pomegues img {
  height: 70%;
  width: 100%;
  object-fit: cover;
}
#frioul {
  height: 80%;
}
#frioul img {
  height: 62%;
  width: 100%;
  object-fit: cover;
}
.block2 img {
  width: 100%;
  height: 66.5%;
  object-fit: cover;
}
#garde,
#lonchamp {
  height: 45%;
}
#garde img {
  object-position: top;
}
#activite figcaption {
  margin-left: 0.7vw;
}
#activite img {
  border-radius: 20px 20px 0px 0px;
}
#photoActivite figure {
  border-radius: 20px 20px 20px 20px;
  box-shadow: 5px 5px 5px #d1d1d1;
}
/*********************** footer ******************/
footer {
  display: flex;
  margin-top: 20px;
  background-color: #f2f2f2;
  padding-left: 3.2vw;
}
#propos {
  flex: 1 30%;
}
#hebergement {
  flex: 1 30%;
}
#assistance {
  flex: 1 30%;
}
footer ul {
  padding: 20px 0;
}
footer li {
  padding: 5px 0 5px 0;
}
footer a:hover {
  color: #0065fc;
}
h4 {
  margin-top: 30px;
  margin-bottom: 0;
}

/************************** Media queries ********************/

@media screen and (max-width: 1400px) {
  #plus {
    padding-top: 2vh;
  }
  #article1,
  #article2 {
    flex-direction: column;
    width: 49%;
  }
  .grandeImg .encartActivite,
  .block1 {
    width: 100%;
  }
  .grandeImg {
    height: 49%;
    margin: 0 0 2.4vw 0;
  }
  .petiteImg {
    flex-direction: row;
    height: 49%;
  }
  #aPomegues,
  #aFrioul,
  #garde,
  #lonchamp {
    height: 100%;
    width: 48%;
  }
  #frioul {
    height: 100%;
  }
  #activite img {
    height: 70%;
  }
  footer {
    margin-top: 6vw;
  }
}
@media screen and (max-width: 1024px) {
  #hotels {
    flex-direction: column-reverse;
  }
  .fondPopulaire {
    margin-bottom: 2.4vh;
  }
  #marseille {
    margin: 2vw 0 0 0;
  }
  #photoActivite {
    flex-direction: column;
    height: 100vw;
  }
  #article1,
  #article2 {
    height: 50%;
    width: 100%;
  }
  #article2 {
    margin: 3.5vw 0 0 0;
  }
}
@media screen and (max-width: 800px) {
  nav {
    width: 100%;
  }
  nav ul {
    width: 100%;
  }
  #signIn {
    position: absolute;
    top: 2.2vh;
    right: 5vw;
  }
  nav a:hover {
    border-top: none;
  }
  nav li {
    width: 100%;
    text-align: center;
    border-bottom: 3px solid #f2f2f2;
    padding-bottom: 2vh;
  }
  nav li:hover {
    border-bottom: 2px solid #0065fc;
  }
  #rechercher {
    display: none;
  }
  #loupe {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    background-color: #0065fc;
    cursor: pointer;
    color: white;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    border: 1px solid #f2f2f2;
    width: 40px;
  }
  .boiteFiltres {
    margin-left: 0px;
    margin-right: 2.6vw;
  }
  /***************** marseille ************************/
  #marseille {
    background: none;
  }
  /************************ activite *********************/
  #activite {
    width: 95%;
    margin: auto;
  }
  #garde {
    margin: 0;
  }
  #activite figcaption {
    margin-top: 1vh;
    margin-left: 4vw;
  }
  /************************* footer ************************/
  footer {
    flex-direction: column;
    padding-left: 5.7vh;
  }
}
@media screen and (max-width: 640px) {
  /**************************** marseille ********************************/
  #photosMarseille {
    flex-direction: column;
  }
  .encartMarseille {
    margin-right: 0;
  }
  /***************************** activite *******************************/
  #photoActivite {
    flex-direction: column;
    height: auto;
  }
  .petiteImg {
    flex-direction: column;
  }
  .petiteImg,
  .grandeImg,
  #garde,
  #Pomegues {
    margin: 0;
  }
  .block1 {
    display: flex;
    flex-direction: column;
  }
  #article1 {
    flex-direction: column;
  }
  #article2 {
    flex-direction: column;
    margin: 0;
  }
  #activite img {
    height: 140px;
  }
  #activite a {
    width: 100%;
    margin-bottom: 2.4vh;
  }
  #activite figure {
    height: 180px;
  }
}

